--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -259,6 +259,10 @@ android {
 
         }
     }
+    packagingOptions {
+        pickFirst '**/libc++_shared.so'
+        pickFirst '**/libfbjni.so'
+    }
 }
 
 dependencies {
