--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
+    "android": "cd android && ./gradlew clean && cd .. && npx react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
@@ -18,7 +18,9 @@
     "moment": "^2.29.4",
     "react": "18.0.0",
     "react-native": "0.69.5",
+    "react-native-blob-util": "^0.17.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-pdf": "^6.6.2",
     "react-native-reanimated": "^2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
